cluster/talk-demo/services/middleware-server/middleware-server-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: middleware-server
  namespace: demo
  labels:
    app: middleware-server
spec:
  selector:
    matchLabels:
      app: middleware-server
  template:
    metadata:
      labels:
        app: middleware-server
    spec:
      serviceAccountName: middleware-server
      containers:
        - name: middleware-server
          image: ghcr.io/chr-fritz/workload-id-middleware-server:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
              name: http
              protocol: TCP
          startupProbe:
            httpGet:
              port: http
              path: /actuator/health/readiness
            periodSeconds: 5
            successThreshold: 1
            failureThreshold: 10
            timeoutSeconds: 2
          readinessProbe:
            httpGet:
              port: http
              path: /actuator/health/readiness
            periodSeconds: 5
            successThreshold: 1
            failureThreshold: 2
            timeoutSeconds: 2
          livenessProbe:
            httpGet:
              port: http
              path: /actuator/health/liveness
            periodSeconds: 5
            successThreshold: 1
            failureThreshold: 10
            timeoutSeconds: 5
          volumeMounts:
            - name: app-config
              mountPath: /config/
            - name: truststore
              mountPath: /truststore/
      volumes:
        - name: app-config
          configMap:
            name: middleware-server
            defaultMode: 0444
            items:
              - key: application-k8s.yaml
                path: application-k8s.yaml
        - name: truststore
          emptyDir: { }
        - name: ca-certificates
          projected:
            sources:
              - configMap:
                  name: kube-root-ca.crt
                  items:
                    - key: ca.crt
                      path: k8s-ca.crt
              - secret:
                  name: keycloak-192-168-107-4.nip.io-tls
                  items:
                    - key: ca.crt
                      path: keycloak-ca.crt
