cluster/talk-demo/services/middleware-server/middleware-server-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: middleware-server
  namespace: demo
spec:
  rules:
    - host: middleware-server-192-168-107-4.nip.io
      http:
        paths:
          - backend:
              service:
                name: middleware-server
                port:
                  name: http
            pathType: Prefix
            path: /
